# saycbridge

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  LICENSE  Makefile  Makefile.broken  README  README.md  requirements.txt
src/: README.md  factory.py  fuzz-bids  gib.py  kbb_baseline.txt  pyproject.toml  robots.txt  saycbot.py  settings.py  test-dd  test-hand  test-sayc  z3b_baseline.txt
src/core/: autobidder.py  board.py  call.py  callexplorer.py  callhistory.py  card.py  deal.py  hand.py  hand_unittest.py  position.py  sayc_unittest.py  suit.py  test_callhistory.py  test_position.py
src/gib/: __init__.py  gib.py  test-dd
src/handlers/: explore_handler.py  new_bidder_handler.py  score_flashcards_handler.py
src/kbb/: __init__.py  bidder.py  constraints.py  fuzz-bids  handconstraints.py  handconstraints_unittest.py  interpreter.py  interpreter_unittest.py  knowledge.py  preconditions.py
src/recaps/: 06-06.html  06-20.html  06-27.html  08-15.html  08-29.html  09-05.html  09-19.html  10-03.html  recap.css
src/scripts/: model.coffee  play.test.coffee  score_flashcards.coffee  view.coffee
src/static/: bidder.appcache
src/stylesheets/: explore.css
src/templates/: analytics.html  new_bidder.html  score_flashcards.html  unittests.html
src/tests/: harness.py  sayc_unittest.py  test_autobid.py  test_sayc.py
src/testsuites/: autobid.py
src/z3b/: __init__.py  bidder.py  cappelletti.py  constraints.py  engine.py  enum.py  forcing.py  model.py  natural.py  ordering.py  orderings.py  preconditions.py  prettymodel.py  rule_compiler.py  rules.py  (+1 more)
(+123 files in other folders)
