[tool.poetry]
name = "saycbridge"
version = "0.1.0"
description = "Bridge bidder"
authors = ["Eric Seidel <github@eseidel.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"
z3-solver = "^4.8.17"
networkx = "^2.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
